# LoopEngine

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  loop.yaml  loopengine.toml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
docs/: agent_integration.md  api_reference.md  architecture.md  cli_guide.md  configuration_reference.md  development.md  plugin_development.md  roadmap.md  technical_debt.md
examples/basic_workflow/: README.md  loopengine.toml
examples/cicd_integration/: README.md
examples/custom_agent_adapter/: README.md
examples/custom_plugin/: README.md
src/loopengine/: __init__.py  __main__.py
src/loopengine/adapters/inbound/: orchestrator.py
src/loopengine/adapters/inbound/api/: server.py
src/loopengine/adapters/inbound/cli/: app.py
src/loopengine/adapters/inbound/webhook/: handler.py
src/loopengine/adapters/outbound/: _subprocess_utils.py
src/loopengine/adapters/outbound/agents/: __init__.py  agent_executor.py  base_agent_adapter.py  claude_adapter.py  codex_adapter.py  copilot_adapter.py  custom_adapter.py  gemini_adapter.py  generic_cli_adapter.py  openai_adapter.py  opencode_adapter.py
src/loopengine/adapters/outbound/analysis/: __init__.py  project_analyzer.py
src/loopengine/adapters/outbound/cicd/: github_actions_adapter.py  gitlab_ci_adapter.py
src/loopengine/adapters/outbound/clock/: system_clock.py
src/loopengine/adapters/outbound/events/: async_event_bus.py  in_memory_event_bus.py
src/loopengine/adapters/outbound/filesystem/: local_filesystem.py
src/loopengine/adapters/outbound/persistence/: __init__.py  in_memory_store.py  json_file_store.py  sqlite_store.py
src/loopengine/adapters/outbound/plugins/: __init__.py  plugin_registry.py  sample_plugin.py
src/loopengine/adapters/outbound/prompts/: __init__.py  file_prompt_provider.py  prompt_registry.py
src/loopengine/adapters/outbound/review/: __init__.py  api_design_reviewer.py  architecture_reviewer.py  base_reviewer.py  complexity_reviewer.py  database_reviewer.py  documentation_reviewer.py  performance_reviewer.py  scalability_reviewer.py  security_reviewer.py  testing_reviewer.py
src/loopengine/adapters/outbound/validation/: __init__.py  base_validator.py  docker_validator.py  gradle_validator.py  linter_validator.py  maven_validator.py  npm_validator.py  pytest_validator.py  python_validator.py  (+3 more)
src/loopengine/application/dto/: agent_request_dto.py  agent_response_dto.py  phase_dto.py  status_report_dto.py  validation_result_dto.py  workflow_dto.py
src/loopengine/application/event_handlers/: notification_handler.py  validation_handler.py  workflow_event_handler.py
src/loopengine/application/services/: agent_orchestration_service.py  reporting_service.py  workflow_application_service.py
src/loopengine/application/use_cases/: cancel_workflow.py  execute_full_cycle.py  get_workflow_status.py  iterate_workflow.py  reflect_and_decide.py  run_phase.py  start_workflow.py  validate_artifact.py
src/loopengine/core/ports/: __init__.py
src/loopengine/core/services/: artifact_analyzer.py  context_assembler.py  convergence_analyzer.py  execution_engine.py  phase_scheduler.py  planner.py  reflection_service.py  workflow_engine.py
src/loopengine/infrastructure/config/: __init__.py  loader.py  manager.py  schema.py  settings.py
src/loopengine/infrastructure/container/: __init__.py  di_container.py  registry.py
src/loopengine/infrastructure/logging/: __init__.py  structured_logger.py
src/loopengine/infrastructure/telemetry/: __init__.py  metrics.py
src/loopengine/plugins/: __init__.py  hook_dispatcher.py  hook_types.py  plugin_base.py  plugin_loader.py  plugin_registry.py
src/loopengine/plugins/builtin/: coverage_enhancer.py  doc_generator.py  metrics_collector.py  security_hardener.py
src/loopengine/shared/: immutable.py  serialization.py  types.py
tests/: conftest.py
tests/architecture/: test_solid.py
tests/factories/: domain_factories.py
tests/integration/services/: test_orchestrator_e2e.py  test_pipeline.py
tests/stubs/: stub_agent.py  stub_clock.py  stub_event_bus.py  stub_executor.py  stub_filesystem.py  stub_logger.py  stub_memory.py  stub_metrics.py  stub_persistence.py
tests/unit/: test_config_loader.py  test_config_manager.py  test_config_schema.py  test_smoke.py
tests/unit/adapters/analysis/: test_project_analyzer.py
tests/unit/adapters/cli/: test_cli.py
tests/unit/adapters/persistence/: test_memory_store.py
tests/unit/adapters/plugins/: test_plugin_registry.py
tests/unit/adapters/prompts/: test_prompt_system.py
tests/unit/adapters/review/: test_api_design_reviewer.py  test_architecture_reviewer.py  test_base_reviewer.py  test_complexity_reviewer.py  test_database_reviewer.py  test_documentation_reviewer.py  test_performance_reviewer.py  test_scalability_reviewer.py  test_security_reviewer.py  test_testing_reviewer.py
tests/unit/adapters/validation/: test_base_validator.py  test_docker_validator.py  test_gradle_validator.py  test_maven_validator.py  test_npm_validator.py  test_pytest_validator.py  test_python_validator.py
tests/unit/core/services/: test_execution_engine.py  test_planner.py  test_reflection_service.py
tests/unit/infrastructure/container/: test_di_container.py
tests/unit/infrastructure/logging/: test_logging_system.py
tests/unit/infrastructure/telemetry/: test_metrics.py
(+71 files in other folders)
