[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "loopeng"
version = "0.1.0"
description = "Engineering orchestration framework for AI coding agents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [{ name = "LoopEngine Contributors" }]
keywords = ["ai", "orchestration", "coding-agent", "workflow", "engineering"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.7,<3",
    "pydantic-settings>=2.3,<3",
    "typer>=0.12,<1",
    "rich>=13.7,<14",
    "structlog>=24.1,<25",
    "pyyaml>=6.0,<7",
    "tomli>=2.0,<3; python_version < '3.11'",
]

[project.optional-dependencies]
api = [
    "fastapi>=0.111,<1",
    "uvicorn[standard]>=0.29,<1",
]
dev = [
    "pytest>=8.2,<9",
    "pytest-cov>=5.0,<6",
    "pytest-asyncio>=0.23,<1",
    "ruff>=0.4,<1",
    "mypy>=1.10,<2",
    "pre-commit>=3.7,<4",
    "coverage[toml]>=7.4,<8",
    "types-PyYAML>=6.0,<7",
]
all = [
    "loopengine[api,dev]",
]

[project.scripts]
loopengine = "loopengine.adapters.inbound.cli.app:main"

# Entry points — uncomment when implementations exist
# [project.entry-points."loopengine.plugins"]
# coverage_enhancer = "loopengine.plugins.builtin.coverage_enhancer:CoveragePlugin"
# security_hardener = "loopengine.plugins.builtin.security_hardener:SecurityPlugin"
# doc_generator = "loopengine.plugins.builtin.doc_generator:DocPlugin"
# metrics_collector = "loopengine.plugins.builtin.metrics_collector:MetricsPlugin"

# [project.entry-points."loopengine.agents"]
# claude = "loopengine.adapters.outbound.agents.claude_adapter:ClaudeAdapter"
# openai = "loopengine.adapters.outbound.agents.openai_adapter:OpenAIAdapter"
# copilot = "loopengine.adapters.outbound.agents.copilot_adapter:CopilotAdapter"
# gemini = "loopengine.adapters.outbound.agents.gemini_adapter:GeminiAdapter"

# [project.entry-points."loopengine.validators"]
# linter = "loopengine.adapters.outbound.validation.linter_validator:LinterValidator"
# type_checker = "loopengine.adapters.outbound.validation.type_checker_validator:TypeCheckerValidator"
# test_runner = "loopengine.adapters.outbound.validation.test_runner_validator:TestRunnerValidator"
# security = "loopengine.adapters.outbound.validation.security_scanner_validator:SecurityScannerValidator"

# ── Hatch ──────────────────────────────────────────────────────────────

[tool.hatch.build.targets.wheel]
packages = ["src/loopengine"]

# ── Ruff ───────────────────────────────────────────────────────────────

[tool.ruff]
target-version = "py312"
line-length = 99
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "A",      # flake8-builtins
    "C4",     # flake8-comprehensions
    "DTZ",    # flake8-datetimez
    "T20",    # flake8-print
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "ARG",    # flake8-unused-arguments
    "RUF",    # ruff-specific rules
    "S",      # flake8-bandit (security)
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate (commented-out code)
    "PLW",    # pylint warnings
]
ignore = [
    "T201",   # allow print() in CLI
    "S101",   # allow assert in tests
    "ARG001", # allow unused function arguments in protocols
]

[tool.ruff.lint.isort]
known-first-party = ["loopengine"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "ARG", "T20"]
"src/loopengine/plugins/**" = ["T20"]
"src/loopengine/adapters/inbound/cli/**" = ["T20"]

# ── pytest ──────────────────────────────────────────────────────────────

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "-ra",
    "--tb=short",
]
markers = [
    "unit: Unit tests (no I/O)",
    "integration: Integration tests (may use I/O)",
    "acceptance: Acceptance / end-to-end tests",
    "slow: Tests that take > 2s",
]
filterwarnings = []

[tool.pytest-asyncio]
mode = "auto"

# ── Coverage ────────────────────────────────────────────────────────────

[tool.coverage.run]
source = ["loopengine"]
branch = true
parallel = true
omit = [
    "*/loopengine/__main__.py",
    "*/loopengine/adapters/inbound/cli/commands/*",
    "*/loopengine/adapters/inbound/cli/formatters/*",
    "*/loopengine/adapters/outbound/agents/*",
    "*/loopengine/plugins/*",
    "*/loopengine/shared/*",
]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 90  # enforce 90% minimum coverage
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.",
    "@overload",
    "raise NotImplementedError",
    "pass",
]

# ── mypy ────────────────────────────────────────────────────────────────

[tool.mypy]
python_version = "3.12"
strict = false
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
pretty = true
ignore_missing_imports = true
